--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WebSocketCommunication\WebSocketCommunication\WebSocketCommunication.csproj" />
+    <ProjectReference Include="..\WebSocketCommunication\WebSocketCommunication\WebSocketCommunication.csproj" />
   </ItemGroup>
 
 </Project>
