Removed important classes from the Utilities project and moved them to the Client project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "WebSocketCommunication"]
 	path = WebSocketCommunication
-	url = https://github.com/That-Coder-Guy/WebSocketCommunication.git
+	url = https://github.com/That-Coder-Guy/WebSocketCommunication
+	branch = master
