Added the sign up page and page switch logic

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Utilities\WebSocketUtilities.csproj" />
     <ProjectReference Include="..\WebSocketCommunication\WebSocketCommunication\WebSocketCommunication.csproj" />
   </ItemGroup>
 
